# torrent-search

./: Cargo.toml  default.nix  flake.nix
src/: magnet.rs  main.rs  provider.rs  torrent.rs
src/providers/: apibay.rs  eztv.rs  knaben.rs  mod.rs  nyaa.rs  yts.rs
